--- a/Navjit-Kaur/public_html/german.html
+++ b/Navjit-Kaur/public_html/german.html
@@ -7,6 +7,14 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <nav>
+            <div class="links"><a href="index.html"><img id="logoImg" src="images/logo.png" alt="LOGO"></a></div>
+            <div class="links">
+                <div class="menu"><a href="index.html#learnLanguage">Learn A Language</a></div>
+                <div class="menu"><a href="index.html#contactForm">Contact</a></div>
+                <div class="menu"><a href="index.html#aboutSection">About</a></div>   
+            </div>
+        </nav>
         <header class="germanH">
             <div class="germanContainer">
                 <hr>
